# Cross-platform-Interprocess-communication-library

./: README.md
IPC/: main.py
IPC/ipc_lib/: 1.py  __init__.py  message_queue.py  named_pipe.py  pipe_mailbox_ipc.py  pubsub.py  shared_memory_block.py  utils.py
core/: Makefile  meson.build  test.py
core/include/: named_pipe.h  ordinary_pipe.h  shared_memory.h
core/src/: main.c  named_pipe.c  ordinary_pipe.c  shared_memory.c
cross-ipc/: compare_results.py  cross-ipc.code-workspace  cross-ipc.sln  cross-ipc.vcxproj  cross-ipc.vcxproj.filters  cross_ipc.c  cross_ipc.h  cross_ipc_export.h  cross_ipc_pubsub.py  cross_ipc_req_resp.py  cross_ipc_results.json  cross_ipc_shm.py  dispenser_pattern.c  dispenser_pattern.h  lock.c  lock.h  main.c  named_pipe.c  named_pipe.h  ordinary_pipe.c  ordinary_pipe.h  pub_sub_pattern.c  pub_sub_pattern.h  req_resp_pattern.c  req_resp_pattern.h  run.py  shared_memory.c  shared_memory.h  shm_dispenser_pattern.c  shm_dispenser_pattern.h  store_dict_pattern.c  store_dict_pattern.h  zeromq_pubsub.py  zeromq_req_resp.py  zeromq_results.json  zeromq_socket.py
cross-ipc/cross-ipc-cpp/: build.bat
cross-ipc/cross-ipc-cpp/examples/: counter_incrementer.cpp
cross-ipc/cross-ipc-cpp/include/: cross_ipc.hpp  (+4 more)
cross-ipc/cross-ipc-go/: counter_visual.go  go.mod  go.sum
cross-ipc/cross-ipc-python/: MANIFEST.in  counter_decrementer.py  counter_incrementer.py  setup.py  shared_memory_test.py  test.py
pyl/: receiver.py  sender.py
pyl/patterns/: DispenserPattern.py  Lock.py  PubSubPattern.py  ReqRespPattern.py  Semaphore.py  StoreDictPattern.py
(+40 files in other folders)
